# A-comparative-study-on-point-cloud-down-sampling-strategies-for-deep-learning-based-crop-organ-seg

./: README.md  list.txt
data-example/3DEPS_ratio=0.20/: data-example.txt
data-example/raw-data/: raw-data.txt
deep-learning-network/: README.md
deep-learning-network/ASIS/data/: train_file_list.txt
deep-learning-network/ASIS/models/: estimate_mean_ins_size.py  eval_iou_accuracy.py  model.py  output2pcd.py  results_a5.txt  test.py  train.py
deep-learning-network/ASIS/utils/: 1111.py  Multyscale_test.py  Multyscale_test2.py  Multyscale_third_test.py  pointnet_util.py  test_utils.py  tf_util.py
deep-learning-network/DGCNN/: 读我.txt
deep-learning-network/DGCNN/data/: test_file_list.txt
deep-learning-network/DGCNN/models/: pointnet2_part_seg.py
deep-learning-network/DGCNN/part_seg/: evaluate.py  output_filelist.txt  test.py  train.py
deep-learning-network/DGCNN/utils/: provider.py  tf_util.py
down-sampling-strategies/3DEPS/: 001批量保存植物边缘和中心部位(c++).cpp  002将边缘部分和非边缘部分合并到4096+4096.py  003按比例合并成一个新点云同时进行10倍扩充.py
down-sampling-strategies/FPS/: FPS_Batch.py
down-sampling-strategies/RS/: CMakeLists.txt  RandomSample.cpp
down-sampling-strategies/UVS/: 001uniformSampling.cpp  002FPS_Batch.py  CMakeLists.txt  uniformSampling.cpp
down-sampling-strategies/VFPS/: 001Voxel_filter.cpp  CMakeLists.txt  Voxel_filter.cpp
down-sampling-strategies/dataset-creation-process/: 000批量修改label格式(python).py  001PCD2TXT(python).py  002去除背景点和噪点.py  003去除在原点的点.py  004添加object标签类别减2.py  006分测试集和训练集.py  007将txt转换成H5(python).py  test_index.npy
(+46 files in other folders)
